--- a/public/app.css
+++ b/public/app.css
@@ -209,7 +209,26 @@ body {
   cursor: pointer;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
 }
+.form-filter-dashboard {
+    display: flex;
+    justify-content: end;
+    flex-direction: column;
+    gap:1rem;
+}
+.link-see-all-container {
+    text-align: end;
+}
+.link-see-all-container a {
+    text-align: end;
+    color: #FF6000;
+    text-decoration: none;
+}
 
+.link-see-all-container a:hover {
+    text-decoration: solid 1px #000000;
+    color:black;
+    cursor: pointer;
+}
 .rdv-all-cards {
     display: flex;
     flex-wrap: wrap;
