Ajout de la route permettant l'authentification et la génération du token

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <main class="main-in-landingpage">
         <div class="big-container-in-login">
-            <img class="logo-in-main" src="logo-garage.png" alt="logo du garage">
+            <img class="logo-in-main" src="logo-mon-garage.png" alt="logo du garage">
                 <button class="login-button">CONNEXION</button>
         </div>
 
