Affichage du formulaire pour ajouter une facture, les données sont bien injectées dans la BDD à la soumission du formulaire

--- a/templates/pages/dashboard.html.twig
+++ b/templates/pages/dashboard.html.twig
@@ -18,7 +18,7 @@
     </head>
     <body>
         <header class="header-dashboard">
-            <img class="logo-dashboard" src="logo-mon-garage.png" alt="logo du garage">
+            <img class="logo-dashboard" src="logo-garage.png" alt="logo du garage">
             <nav class="nav-dashboard">
                 <a href="/new_appointment">Nouveau RDV</a>
                 <a href="/history">Historique RDV</a>
@@ -110,7 +110,7 @@
                             <a href="{{ url("delete", {"id" : appointment.id, "from": "dashboard"}) }}" class="link-in-modal">
                                 <button id="delete-button" class="button-modal">SUPPRIMER</button>
                             </a>
-                            <a class="link-in-modal">
+                            <a class="link-in-modal" href="{{ path('billing_form') }}">
                                 <button id="invoice-button" class="button-modal">FACTURE/DEVIS</button>
                             </a>
 
