--- a/templates/pages/history.html.twig
+++ b/templates/pages/history.html.twig
@@ -18,7 +18,7 @@
     </head>
     <body>
         <header class="header-dashboard">
-            <img class="logo-dashboard" src="logo-mon-garage.png" alt="logo du garage">
+            <img class="logo-dashboard" src="logo-garage.png" alt="logo du garage">
             <nav class="nav-dashboard">
                 <a href="/new_appointment">Nouveau RDV</a>
                 <a href="/dashboard">Tableau de bord</a>
