--- a/templates/pages/modify_appointment.html.twig
+++ b/templates/pages/modify_appointment.html.twig
@@ -18,7 +18,7 @@
     </head>
      <body>
         <header class="header-form">
-            <img class="logo-form" src="/logo-mon-garage.png" alt="logo du garage">
+            <img class="logo-form" src="/logo-garage.png" alt="logo du garage">
             <a href="/dashboard" class="return-button-form" >Tableau de bord</a>
         </header>
 
