--- a/templates/pages/billing_success.html.twig
+++ b/templates/pages/billing_success.html.twig
@@ -18,9 +18,12 @@
 
 <main class="main-form">
     <h2 class="form_title">Confirmation</h2>
-    <p>Votre facture a bien été créée !</p>
+    <p class="form_title">Votre facture a bien été créée !</p>
     <div class="submit-form-button_container">
-        <a href="/dashboard" class="return-button-form">Retour au tableau de bord</a>
+        <a href="" class="billing-dwl">Télécharger</a>
+    </div>
+    <div class="submit-form-button_container">
+        <a href="/dashboard" class="return-billing">Retour au tableau de bord</a>
     </div>
 </main>
 </body>
