--- a/templates/pages/billing_form.html.twig
+++ b/templates/pages/billing_form.html.twig
@@ -56,59 +56,61 @@
     <a href="/dashboard" class="return-button-form">Tableau de bord</a>
 </header>
 
-<main class="main-form">
     {{ form_start(form) }}
-
+<main class="main-form">
     <h2 class="form_title">DEVIS / FACTURE</h2>
 
     <div class="form-container">
-        <div class="form-group">
-            <label for="form-status" class="form-label">Status</label>
-            {{ form_widget(form.status) }}
-        </div>
-        <div class="form-group">
-            <label for="form-name" class="form-label">Nom du client</label>
-            {{ form_widget(form.name) }}
-        </div>
-        <div class="form-group">
-            <label for="form-adress" class="form-label">Adresse</label>
-            {{ form_widget(form.adress) }}
-        </div>
-        <div class="form-group">
-            <label for="form-creationDate" class="form-label">Facture créée le</label>
-            {{ form_widget(form.creationDate) }}
-        </div>
-        <div class="form-group">
-            <label for="form-brand" class="form-label">Marque</label>
-            {{ form_widget(form.brand) }}
-        </div>
-        <div class="form-group">
-            <label for="form-model" class="form-label">Modèle</label>
-            {{ form_widget(form.model) }}
-        </div>
-        <div class="form-group">
-            <label for="form-mileage" class="form-label">Kilométrage</label>
-            {{ form_widget(form.mileage) }}
-        </div>
-        <div class="form-group">
-            <label for="form-releaseDate" class="form-label">Mise en circulation</label>
-            {{ form_widget(form.releaseDate) }}
-        </div>
-        <div class="form-group">
-            <label for="form-numberplate" class="form-label">Immatriculation</label>
-            {{ form_widget(form.numberplate) }}
-        </div>
-        <div class="form-group">
-            <label for="form-serialNumber" class="form-label">N° de série</label>
-            {{ form_widget(form.serialNumber) }}
-        </div>
-        <div class="form-group">
-            <label for="form-tva" class="form-label">TVA</label>
-            {{ form_widget(form.tva) }}
+        <div class="form-subcontainer">
+
+            <div class="form-group">
+                <label for="form-status" class="form-label">Status</label>
+                {{ form_widget(form.status) }}
+            </div>
+            <div class="form-group">
+                <label for="form-name" class="form-label">Nom du client</label>
+                {{ form_widget(form.name) }}
+            </div>
+            <div class="form-group">
+                <label for="form-adress" class="form-label">Adresse</label>
+                {{ form_widget(form.adress) }}
+            </div>
+            <div class="form-group">
+                <label for="form-creationDate" class="form-label">Facture créée le</label>
+                {{ form_widget(form.creationDate) }}
+            </div>
+            <div class="form-group">
+                <label for="form-brand" class="form-label">Marque</label>
+                {{ form_widget(form.brand) }}
+            </div>
+            <div class="form-group">
+                <label for="form-model" class="form-label">Modèle</label>
+                {{ form_widget(form.model) }}
+            </div>
+            <div class="form-group">
+                <label for="form-mileage" class="form-label">Kilométrage</label>
+                {{ form_widget(form.mileage) }}
+            </div>
+            <div class="form-group">
+                <label for="form-releaseDate" class="form-label">Mise en circulation</label>
+                {{ form_widget(form.releaseDate) }}
+            </div>
+            <div class="form-group">
+                <label for="form-numberplate" class="form-label">Immatriculation</label>
+                {{ form_widget(form.numberplate) }}
+            </div>
+            <div class="form-group">
+                <label for="form-serialNumber" class="form-label">N° de série</label>
+                {{ form_widget(form.serialNumber) }}
+            </div>
+            <div class="form-group">
+                <label for="form-tva" class="form-label">TVA</label>
+                {{ form_widget(form.tva) }}
+            </div>
         </div>
 
-        <h3>Articles</h3>
         <div class="items-container" data-prototype="{{ form_widget(form.items.vars.prototype)|e('html_attr') }}">
+            <h3>Articles</h3>
             {% for item in form.items %}
                 <div class="form-group">
                     <label for="{{ item.quantity.vars.id }}" class="form-label">Quantité</label>
@@ -125,10 +127,14 @@
             {% endfor %}
         </div>
 
-        <button type="submit" class="btn-submit">Soumettre</button>
+
     </div>
-    {{ form_end(form) }}
 </main>
+<div class="btn-form-container">
+    <button type="submit" class="btn-submit">Soumettre</button>
+</div>
+
+{{ form_end(form) }}
 
 </body>
 </html>
