--- a/templates/pages/history.html.twig
+++ b/templates/pages/history.html.twig
@@ -20,6 +20,7 @@
         <header class="header-dashboard">
             <img class="logo-dashboard" src="logo-garage.png" alt="logo du garage">
             <nav class="nav-dashboard">
+                <a href="{{ path('billing_form') }}">Facture/Devis</a>
                 <a href="/new_appointment">Nouveau RDV</a>
                 <a href="/dashboard">Tableau de bord</a>
                 <a href="/logout">Déconnexion</a>
