--- a/templates/pages/billing_form.html.twig
+++ b/templates/pages/billing_form.html.twig
@@ -25,6 +25,7 @@
                 const newItem = prototype.replace(/__name__/g, index);
                 const div = document.createElement('div');
                 div.innerHTML = newItem;
+                div.classList.add('new-item');
                 const deleteButton = document.createElement('button');
                 deleteButton.type = 'button';
                 deleteButton.textContent = 'Supprimer';
@@ -65,7 +66,7 @@
 
             <div class="form-group">
                 <label for="form-status" class="form-label">Status</label>
-                {{ form_widget(form.status) }}
+                <span class="btn-in-billing-form"> {{ form_widget(form.status) }}</span>
             </div>
             <div class="form-group">
                 <label for="form-name" class="form-label">Nom du client</label>
@@ -110,19 +111,19 @@
         </div>
 
         <div class="items-container" data-prototype="{{ form_widget(form.items.vars.prototype)|e('html_attr') }}">
-            <h3>Articles</h3>
+            <h3>Items à ajouter</h3>
             {% for item in form.items %}
                 <div class="form-group">
                     <label for="{{ item.quantity.vars.id }}" class="form-label">Quantité</label>
-                    {{ form_widget(item.quantity) }}
+                    <span class="field-for-items">{{ form_widget(item.quantity) }}</span>
                 </div>
                 <div class="form-group">
                     <label for="{{ item.name.vars.id }}" class="form-label">Nom</label>
-                    {{ form_widget(item.name) }}
+                    <span class="field-for-items">{{ form_widget(item.name) }}</span>
                 </div>
                 <div class="form-group">
                     <label for="{{ item.price.vars.id }}" class="form-label">Prix</label>
-                    {{ form_widget(item.price) }}
+                    <span class="field-for-items">{{ form_widget(item.price) }}</span>
                 </div>
             {% endfor %}
         </div>
